# recipe-app

./: .cta.json  .gitignore  docker-compose.yml  package-lock.json  package.json
.cursor/rules/: cursor-rules.mdc  directory-structure.mdc  tech-stack.mdc
.github/workflows/: auto_deploy.yml
backend/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: db.py
backend/app/recipes/services/: recipe_service.py
drizzle/meta/: 0000_snapshot.json  _journal.json
frontend/: Dockerfile.dev  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/services/: apiClient.ts
scripts/: deploy.sh
src/: routeTree.gen.ts  styles.css
src/components/: recipeCard.tsx  recipeForm.tsx
src/db/: schema.ts
src/lib/: kroger.ts
src/routes/: __root.tsx  index.tsx
src/routes/api/auth/: callback.ts  login.ts
src/routes/api/cart/: add.ts
src/routes/recipes/: index.tsx
src/routes/recipes/$id/edit/: index.tsx
src/routes/recipes/$id/view/: index.tsx
src/routes/recipes/new/: index.tsx
