[project]
name = "recipe-app-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.1",
    "boto3>=1.40.71",
    "fastapi>=0.121.1",
    "httpx>=0.28.1",
    "langchain>=1.0.5",
    "langchain-aws>=1.0.0",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=12.0.0",
    "pint>=0.25.2",
    "psycopg[binary]>=3.2.12",
    "pydantic-settings>=2.12.0",
    "python-docx>=1.2.0",
    "python-jose[cryptography]>=3.5.0",
    "recipe-scrapers>=15.9.0",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]
